--- a/app/css/sass/_feed.scss
+++ b/app/css/sass/_feed.scss
@@ -8,6 +8,14 @@ ul {
         width: 90%;
         margin: 0 auto;
         margin-top: 2%;
+        &.listitem {
+            float: right;
+            &:after {
+              content: "";
+              display: table;
+              clear: both;
+            }
+        }
         span {
             display: block;
             width: 100%;
@@ -18,6 +26,12 @@ ul {
             font-weight: 400;
             line-height: 1.7em;
             border-bottom: 1px solid black;
+        }
+        img {
+            max-width: 200px;
+            max-height: 200px;
+            border: 1px solid #fff;
+            margin: 0 auto;
         }
     }
 }
