--- a/app/css/stylesheets/map.css
+++ b/app/css/stylesheets/map.css
@@ -12,22 +12,26 @@ body {
 	height: 100%;
 	margin-top: 60px;
 }
+/* line 7, ../sass/main.scss */
 body {
   background: #efefef;
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: 200;
 }
 
-/* line 15, ../sass/main.scss */
+/* line 16, ../sass/main.scss */
 a {
   text-decoration: none;
+  color: #000;
 }
 
-/* line 19, ../sass/main.scss */
+/* line 21, ../sass/main.scss */
 h1 {
   font-size: 2em;
+  font-weight: 200;
 }
 
+/* line 25, ../sass/main.scss */
 header {
   width: 100%;
   top: 0;
@@ -38,14 +42,22 @@ header {
   box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.4);
   z-index: 10;
 }
-/* line 32, ../sass/main.scss */
+/* line 34, ../sass/main.scss */
 header h1 {
   margin: 15px;
   color: #444;
   float: left;
   margin-left: 2.5%;
 }
-/* line 38, ../sass/main.scss */
+/* line 40, ../sass/main.scss */
+header #foodfinder {
+  float: right;
+  margin: 10px;
+  margin-top: 25px;
+  text-decoration: underline;
+  color: #7572b6;
+}
+/* line 47, ../sass/main.scss */
 header #searchbar {
   -moz-transition: border, box-shadow 0.3s ease-in-out;
   -o-transition: border, box-shadow 0.3s ease-in-out;
@@ -63,11 +75,11 @@ header #searchbar {
   position: relative;
   text-indent: 20px;
   vertical-align: center;
-  color: #444;
+  color: #efefef;
   line-height: 2.1em;
   outline: none;
 }
-/* line 55, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 header #searchbar:focus {
   border: 2px solid #7572b6;
   box-shadow: 0 0 0.4em #7572b6;
