--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -1,5 +1,5 @@
 header
     a(href='/') 
-        h1 Tufts Clubs
+        h1 ClubHub
     div#searchbar(contenteditable="true") Search
     a(id='foodfinder', href='/foodfinder') Find Free Food
