--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title= "club hub"
+    title= "ClubHub"
     link(rel='stylesheet', href='css/stylesheets/main.css')
   body
     include header
