--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -17,7 +17,7 @@ html(lang="en")
                     a(href='/clubs/ClubBaseball') Club Baseball
                     a(href='/clubs/TheMingChow') The Ming Chow Fan Club
                     a(href='/clubs/SynchronizedSwim') Tufts Asynchronized Swimming
-                    a(href='/clubs/Sarabande') Sarabande
+                    a(href='/sarabande') Sarabande
                     a(href='/clubs/CheeseClub') Cheese Club
                     a(href="/listclubs" alt="Browse All Clubs") Browse all clubs
     ul#feed
