--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -84,7 +84,7 @@ header {
     position: relative;
 }
 
-#new-event {
+#new-event, #clubs {
     margin: 0 auto;
     background-color: rgba(255,255,255,0.4);
     padding: 30px;
