--- a/app/views/listclubs.jade
+++ b/app/views/listclubs.jade
@@ -6,3 +6,13 @@ html(lang="en")
   body
     include header
     ul#clubs
+        li Aepi
+        li Tufts Mountain Club
+        li Tufts Democrats
+        li Tufts Compliments
+        li 180 Degrees Consulting
+        li Compass Fellows
+        li Association of Latin American Students
+        li Tufts Dance Collective
+        li Burlesque
+        li Kappa Alpha Theta
