--- a/app/css/sass/main.scss
+++ b/app/css/sass/main.scss
@@ -84,7 +84,7 @@ header {
     position: relative;
 }
 
-#new-event, #clubs {
+#new-event, #clubs, #singleclub {
     margin: 0 auto;
     background-color: rgba(255,255,255,0.4);
     padding: 30px;
@@ -103,6 +103,29 @@ header {
     .event-button {
         float: left;
         width: 100%;
+    }
+}
+
+#singleclub {
+    h3 {
+        font-size: 1.6em;
+        margin-bottom: 20px;
+    }
+    #clubimg {
+        border: 3px solid black;
+        border-radius: 50%;
+    }
+    img {
+        width: 300px;
+        height: 300px;
+        opacity: 1;
+        @include transition(opacity 0.3s ease-in-out);        
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+    #description {
+        margin-top: 20px;
     }
 }
 
