--- a/app/views/eventform.jade
+++ b/app/views/eventform.jade
@@ -1,6 +1,7 @@
 html(lang="en")
   head
     title Create New Event
+    link(rel='icon', type='image/ico', href='images/favicon.ico')
     link(rel='stylesheet', href='css/stylesheets/main.css')
   body
     include header
