--- a/app/views/listclubs.jade
+++ b/app/views/listclubs.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title= "tuftsclubs"
+    link(rel='icon', type='image/ico', href='images/favicon.ico')
     link(rel='stylesheet', href='css/stylesheets/main.css')
   body
     include header
