--- a/app/views/foodfinder.jade
+++ b/app/views/foodfinder.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title Food Finder
+    link(rel='icon', type='image/ico', href='images/favicon.ico')
     meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
     link(rel='stylesheet', href='css/stylesheets/map.css', type='text/css')
