--- a/app/views/foodfinder.jade
+++ b/app/views/foodfinder.jade
@@ -19,7 +19,7 @@ html(lang="en")
       //init map and display my location
       function init() {
         var myOptions = {
-          zoom: 15
+          zoom: 15,
           center: new google.maps.LatLng(myLat, myLng),
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
